# orderflow-tradingtool

./: CLAUDE.md
crypto-perp-scalping-tool/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
crypto-perp-scalping-tool/config/: default.yaml
crypto-perp-scalping-tool/data/: btcusdt_24h.csv  btcusdt_recent.csv  sample_trades.csv
crypto-perp-scalping-tool/docs/: crypto-perp-scalping-technical-spec.md  gap-remediation-log.md  implementation-framework.md  implementation-iteration-log.md  project-issues-and-resolutions.md  strategy.md  usage.md  zeabur-deployment.md
crypto-perp-scalping-tool/src/crypto_perp_tool/: __init__.py  cli.py  config.py  paper.py  security.py  serialization.py  service.py  telegram_bot.py  types.py
crypto-perp-scalping-tool/tests/unit/: test_auth.py  test_backtest_engine.py  test_backtest_report.py  test_bias.py  test_binance_market_data.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_config_loader.py  test_config_version.py  test_confirmation.py  test_docs_integrity.py  test_execution_shared_helpers.py  test_health.py  test_journal.py  test_live_orderflow_store.py  test_market_data_health.py  test_market_data_latency.py  test_market_state.py  test_network.py  test_orderflow_features.py  test_orderflow_view.py  test_paper_runner.py  test_paper_trading_engine.py  test_profile_engine.py  test_reconciler.py  test_replay_engine.py  test_risk_engine.py  test_session_detector.py  test_setup_candidates.py  test_signal_engine.py  test_simulation_runner.py  test_telegram_bot.py  test_telegram_poller.py  (+7 more)
(+59 files in other folders)
