[project]
name = "crypto-perp-scalping-tool"
version = "0.1.0"
description = "Paper-first crypto perpetual scalping framework."
requires-python = ">=3.11"
dependencies = ["websockets>=12"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crypto_perp_tool = ["web/static/*.html", "web/static/*.css", "web/static/*.js"]

[project.scripts]
crypto-tool = "crypto_perp_tool.cli:main"

[tool.crypto-perp-scalping-tool]
test_command = "python -m unittest discover -s tests/unit"
